# compel5

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
test/: test_prompt_parser.py
